--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-swipeable": "^7.0.2",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
